# leanpub-multi-action

./: .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  action.yml  pyproject.toml  tasks.py
.github/actions/setup-environment/: action.yml
.github/workflows/: release.yml  tests.yml
leanpub_multi_action/: __init__.py  cli.py  leanpub.py
tests/unit/: conftest.py  test_cli.py  test_initial_pass.py  test_leanpub.py
