[project]
name = "leanpub-multi-action"
version = "1.0.2"
description = "GitHub Actions for Leanpub.com"
authors = [{name = "Brett Lykins", email = "lykinsbd@gmail.com"}]
requires-python = ">=3.9"
dependencies = [
    "requests>=2",
    "click>=8",
]

[dependency-groups]
dev = [
    "pytest",
    "requests-mock",
    "pyyaml",
    "black",
    "pylint",
    "pydocstyle",
    "yamllint",
    "bandit",
    "invoke",
    "toml",
    "flake8",
    "towncrier",
    "isort",
]

[project.scripts]
lma = "leanpub_multi_action.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ["py39"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | settings.py     # This is where you define files that should not be stylized by black
                     # the root of the project
)
'''

[tool.pylint.basic]
# No docstrings required for private methods (Pylint default), or for test_ functions, or for inner Meta classes.
no-docstring-rgx="^(_|test_|Meta$)"

[tool.pylint.messages_control]
# Line length is enforced by Black, so pylint doesn't need to check it.
# Pylint and Black disagree about how to format multi-line arrays; Black wins.
disable = """,
    line-too-long,
    bad-continuation,
    """

[tool.pylint.miscellaneous]
# Don't flag TODO as a failure, let us commit with things that still need to be done in the code
notes = """,
    FIXME,
    XXX,
    """

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
addopts = "-vv --doctest-modules"

[tool.towncrier]
package = "leanpub_multi_action"
filename = "RELEASE_NOTES.rst"
single_file = false
name = "Leanpub Multi Action"

[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 120
