[project]
name = "leanpub-multi-action"
version = "2.0.1"
description = "GitHub Actions for Leanpub.com"
authors = [{name = "Brett Lykins", email = "lykinsbd@gmail.com"}]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "requests>=2",
    "click>=8",
]

[project.urls]
Homepage = "https://github.com/lykinsbd/leanpub-multi-action"
Repository = "https://github.com/lykinsbd/leanpub-multi-action"
Issues = "https://github.com/lykinsbd/leanpub-multi-action/issues"

[dependency-groups]
dev = [
    "pytest",
    "requests-mock",
    "pyyaml",
    "ruff",
    "pylint",
    "yamllint",
    "invoke",
    "toml",
    "pre-commit",
    "mypy",
    "types-requests",
]

[project.scripts]
lma = "leanpub_multi_action.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "D", "S"]
ignore = ["E501", "D203", "D213"]

[tool.ruff.lint.isort]
known-first-party = ["leanpub_multi_action"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "D"]

[tool.pylint.basic]
# No docstrings required for private methods (Pylint default), or for test_ functions, or for inner Meta classes.
no-docstring-rgx="^(_|test_|Meta$)"

[tool.pylint.messages_control]
# Line length is enforced by ruff, so pylint doesn't need to check it.
disable = """,
    line-too-long,
    """

[tool.pylint.miscellaneous]
# Don't flag TODO as a failure, let us commit with things that still need to be done in the code
notes = """,
    FIXME,
    XXX,
    """

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
addopts = "-vv --doctest-modules"
